# ecpoint-calibrate

./: .babelrc  .dockerignore  .env  .eslintrc  .eslintrc.js  .gitattributes  .gitignore  .prettierignore  .prettierrc  .travis.yml  Dockerfile  Dockerfile.core  Dockerfile.electron  Dockerfile.logger  Pipfile  README.md  build-requirements.txt  build.sh  deploy.sh  dev-requirements.txt  docker-compose.yml  environment.yml  go.sh  index.html  install_eccodes.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  repkg.sh  server.js  setup.py  start_log_agent.sh  test.ascii  webpack.config.js
.circleci/: config.yml
.github/workflows/: core.yml  docker.yml  electron.yml  release.yml  release_core.yml  release_electron.yml
Meeting/Week1/: Welcome_Task1.pptx
Meeting/Week2/: MetviewMacro_Computations  OutputMetviewMacro_AsciiTable
Meeting/Week8/: Module2_Script.m  Predictors.csv  ecPoint_Cal.m  hist_varFER.m  importInParams_csv.m  importPredictors_csv.m  importThrWTs_csv.m
core/: api.py  ascii.py  models.py  smoke.py  utils.py
core/computations/: computer.py  models.py  predictor.py  serializer.py  utils.py
core/loaders/: BaseLoader.py  GeopointsLoader.py  GribLoader.py  __init__.py  ascii.py  fieldset.py  generics.py  geopoints.py  parquet.py  utils.py
core/postprocessors/: conditional_verification.py  decision_tree.py  generics.py  ks_engine.py  ks_test.py
core/processing/: decision_tree.py
core/processor/: __init__.py  log_factory.py  models.py  utils.py
pm/: guide.md  week1.md
share/: architecture.xml  ecpoint-calibrate.desktop
snap/: snapcraft.yaml
tests/: conf.py  test_computations.py  test_computer.py  test_decision_tree.py  test_grib_loader.py  test_loaders.py  test_processor.py
ui/: App.js  commonActions.js  index.html  main.js  server.js
uix/: fileexplorer.kv  main.py
(+723 files in other folders)
