[tool.poetry]
name = "ecpoint-calibrate"
version = "0.30.0"
description = "Calibration and conditional verification of numerical weather prediction model outputs."
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "core"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
attrs = "^23.1.0"
Flask = "^2.3.1"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
metview = "^1.14.0"
healthcheck = "^1.3.3"
netCDF4 = "^1.6.3"
scipy = "^1.10.1"
colour = "^0.1.5"
python-dateutil = "^2.8.2"
pyarrow = "^11.0.0"
Flask-Cors = "^3.0.10"
ecmwflibs = "^0.5.3"
cfgrib = "^0.9.10.3"
xarray = "^2023.4.2"
conda-lock = "^1.4.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.1"
pudb = "^2022.1.3"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
codecov = "^2.1.13"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
