[tool.poetry]
name = "ecpoint-calibrate"
version = "0.31.2"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "core"}]

[tool.poetry.dependencies]
python = "~3.8"
scipy = "^1.10.1"
xarray = "2023.*"
attrs = "^23.1.0"
flask = "^2.3.1"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
metview = "^1.14.0"
healthcheck = "^1.3.3"
netcdf4 = "^1.6.3"
colour = "^0.1.5"
python-dateutil = "^2.8.2"
pyarrow = "^11.0.0"
flask-cors = "^3.0.10"
ecmwflibs = "^0.5.3"
cfgrib = "^0.9.10.3"


[tool.poetry.group.dev.dependencies]
ipython = "7.*"
pudb = "^2022.1.3"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
codecov = "^2.1.13"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
